tests/testthat/fixtures/parse-errors/knit-error.Rmd
---
title: "Knit Errors"
outputhtml_document
---

```{r}
# this should give no error
a <- 1 + 1
```


